test-linux-on-mac.sh works in local#92